--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 groq
-streamlit
 langchain==0.1.16
 langchain-core==0.1.42
 langchain-community
@@ -37,15 +36,14 @@ google-api-python-client>=2.100.0
 docx2txt
 nest-asyncio
 lxml[html_clean]
-playwright
+playwright>=1.44.0
 redis
-spacy>=3.7.0
-# spaCy 모델 직접 설치
-https://github.com/explosion/spacy-models/releases/download/ko_core_news_sm-3.7.0/ko_core_news_sm-3.7.0-py3-none-any.whl#egg=ko_core_news_sm
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl#egg=en_core_web_sm
+
+# --- Pydantic/ spaCy 호환 ---
+pydantic<2
+spacy>=3.7,<3.8
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
+ko_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ko_core_news_sm-3.7.0/ko_core_news_sm-3.7.0-py3-none-any.whl
+
 yt-dlp
 openai-whisper
-google-api-python-client
-playwright>=1.44.0
-
-
