--- a/personas.yaml
+++ b/personas.yaml
@@ -9,7 +9,7 @@ groups:
     - name: P1_주제_탐색
       rag: web
       text: |
-        유튜브 숏폼에서 바이럴 가능성이 높은 오늘의 역사 주제를 1가지 선정하라.
+        유튜브 숏폼에서 바이럴 가능성이 높은 주제를 1가지 선정하라.
         선정 근거를 3줄로 정리하라.
 
     - name: P2_앵글_결정
@@ -18,8 +18,7 @@ groups:
         P1 결과를 바탕으로 30초 분량 한 문장 후킹을 제안하라. 단 1문장.
 
     - name: P3_스크립트_작성
-      rag: youtube
-      youtube_channel: "@역사이야기"
+      rag: none
       text: |
         P2 후킹을 확장하여 30초 대본을 6~8문장으로 쓰고, 한 문장당 6~12단어로 간결하게.
 
