자동화에맞게수정

--- a/personas.yaml
+++ b/personas.yaml
@@ -46,7 +46,8 @@ groups:
     - name: E2_감성_문장화
       rag: none
       text: |
-        짧은 문장들로 감성 텍스트를 10~14줄 작성.
+        짧은 문장들로 감성 텍스트를 6~8줄 작성.
+        각 줄은 12~20자 내외, 불릿/번호/머리말 없이 본문만.
 
     - name: E3_정제
       rag: none
