자동화에맞게수정

--- a/personas.yaml
+++ b/personas.yaml
@@ -36,6 +36,8 @@ groups:
       rag: none
       text: |
         P3/P4를 통합해 최종 30초 스크립트 1개만 출력. 문장 연결 자연스럽게.
+        최종 스크립트는 반드시 대사 문장만 있어야한다.
+        
 
   emotional:
     - name: E1_주제_탐색
